--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "mineflayer": "^4.20.1"
+    "mineflayer": "^4.20.1",
+    "openai": "^4.47.1"
   }
 }
