--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "mineflayer": {
-    "host": "localhost",
-    "port": 62801,
+    "host": "25.4.133.163",
+    "port": 61461,
     "username": "TheLittleCaesars",
     "version": "1.18.2"
   }
