Add CLI args parsing and restructure project

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "mineflayer": "^4.20.1",
-    "openai": "^4.47.1"
+    "openai": "^4.47.1",
+    "yargs": "^17.7.2"
   }
 }
