Add Command interface for bot

--- a/src/bot/settings.json
+++ b/src/bot/settings.json
@@ -1,5 +1,6 @@
 {
   "host": "localhost",
-  "port": "57556",
-  "username": "TheLittleCaesars"
+  "port": "50491",
+  "username": "TheLittleCaesars",
+  "version": "1.18.2"
 }
