--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "type": "module",
   "dependencies": {
+    "minecraft-data": "^3.65.0",
     "mineflayer": "^4.20.1",
+    "mineflayer-pathfinder": "^2.4.5",
     "openai": "^4.47.1",
     "yargs": "^17.7.2"
   }
