--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
+    "chromadb": "^1.8.1",
+    "chromadb-default-embed": "^2.13.2",
     "minecraft-data": "^3.65.0",
     "mineflayer": "^4.20.1",
     "mineflayer-pathfinder": "^2.4.5",
