--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "chromadb-default-embed": "^2.13.2",
     "minecraft-data": "^3.65.0",
     "mineflayer": "^4.20.1",
+    "mineflayer-armor-manager": "^2.0.1",
+    "mineflayer-auto-eat": "^3.3.6",
+    "mineflayer-collectblock": "^1.4.1",
     "mineflayer-pathfinder": "^2.4.5",
+    "mineflayer-pvp": "^1.3.2",
     "openai": "^4.47.1",
     "yargs": "^17.7.2"
   }
