--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mineflayer-collectblock": "^1.4.1",
     "mineflayer-pathfinder": "^2.4.5",
     "mineflayer-pvp": "^1.3.2",
+    "mineflayer-statemachine": "^1.7.0",
     "openai": "^4.47.1",
     "yargs": "^17.7.2"
   }
